[package]
name = "dyson"
version = "0.1.0"
edition = "2021"
authors = ["hayas1 <h4ystack@gmail.com>"]
repository = "https://github.com/hayas1/dyson"
homepage = "https://hayas1.github.io/dyson/dyson"
license-file = "LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.3"
