[package]
name = "dyson"
version = "0.1.0"
authors = ["hayas1 <h4ystack@gmail.com>"]
description = "dynamic json parser"
edition = "2021"
rust-version = "1.61.0"
repository = "https://github.com/hayas1/dyson"
homepage = "https://hayas1.github.io/dyson/dyson"
license-file = "LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
atty = "0.2"

[dev-dependencies]
tempfile = "3.3"
