[package]
authors = ["hayas1 <h4ystack@gmail.com>"]
description = "dynamic json parser"
edition = "2021"
homepage = "https://hayas1.github.io/dyson/dyson"
license-file = "LICENSE"
name = "dyson"
readme = "./README.md"
repository = "https://github.com/hayas1/dyson"
rust-version = "1.61.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indexmap = "1.9.1"
itertools = "0.10.3"
thiserror = "1.0"

atty = "0.2"
clap = {version = "3.2", features = ["derive"]}

[dev-dependencies]
tempfile = "3.3"
